kubernetes/balloon/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: balloon-race

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: balloon-race
