kubernetes/balloon/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`balloon.calfur.dev`)
    kind: Rule
    services:
    - name: balloon-race
      port: 80
  tls:
    certResolver: myresolver
